# data-capture-automation

./: README.md  apply_data.py  dependencies.txt  limitations.md  main.py  pdf_ocr.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: bandit.yml
app/: apply_data.py  main.py  pdf_ocr.py
